@@ -106,7 +106,7 @@ runFactory(Client cntxt, MalBlkPtr mb, MalBlkPtr mbcaller, MalStkPtr stk, InstrP
 	/* inherit debugging */
 	cmd = stk->cmd;
 	if ( pl->stk == NULL)
-			throw(MAL, "factory.new", "internal error, stack frame missing");
+		throw(MAL, "factory.new", "internal error, stack frame missing");
 
 	/* copy the calling arguments onto the stack
 	   of the factory */
@@ -118,7 +118,8 @@ runFactory(Client cntxt, MalBlkPtr mb, MalBlkPtr mbcaller, MalStkPtr stk, InstrP
 			k--;
 
 		rhs = &pl->env->stk[getArg(pci, i)];
-		VALcopy(lhs, rhs);
+		if (VALcopy(lhs, rhs) == NULL)
+			throw(MAL, "factory.call", MAL_MALLOC_FAIL);
 		if( lhs->vtype == TYPE_bat )
 			BBPincref(lhs->val.bval, TRUE);
 	}
@@ -131,7 +132,8 @@ runFactory(Client cntxt, MalBlkPtr mb, MalBlkPtr mbcaller, MalStkPtr stk, InstrP
 			if( isVarConstant(mb,i) > 0 ){
 				if( !isVarDisabled(mb,i)){
 					rhs = &getVarConstant(mb,i);
-					VALcopy(lhs,rhs);
+					if (VALcopy(lhs,rhs) == NULL)
+						throw(MAL, "factory.call", MAL_MALLOC_FAIL);
 				}
 			} else{
 				lhs->vtype = getVarGDKType(mb,i);
@@ -187,7 +189,8 @@ callFactory(Client cntxt, MalBlkPtr mb, ValPtr argv[], char flag){
 		if( isVarConstant(mb,i) > 0 ){
 			lhs = &stk->stk[i];
 			rhs = &getVarConstant(mb,i);
-			VALcopy(lhs,rhs);
+			if (VALcopy(lhs,rhs) == NULL)
+				throw(MAL, "factory.call", MAL_MALLOC_FAIL);
 		} else {
 			lhs = &stk->stk[i];
 			lhs->vtype = getVarGDKType(mb,i);
@@ -209,7 +212,8 @@ callFactory(Client cntxt, MalBlkPtr mb, ValPtr argv[], char flag){
 	i = psig->retc;
 	for (i = psig->retc; i < psig->argc; i++) {
 		lhs = &pl->stk->stk[psig->argv[i]];
-		VALcopy(lhs, argv[i]);
+		if (VALcopy(lhs, argv[i]) == NULL)
+			throw(MAL, "factory.call", MAL_MALLOC_FAIL);
 		if( lhs->vtype == TYPE_bat )
 			BBPincref(lhs->val.bval, TRUE);
 	}
@@ -277,7 +281,8 @@ yieldResult(MalBlkPtr mb, InstrPtr p, int pc)
 #endif
 				rhs = &pl->stk->stk[getArg(p, i)];
 				lhs = &pl->env->stk[getArg(pl->pci, i)];
-				VALcopy(lhs, rhs);
+				if (VALcopy(lhs, rhs) == NULL)
+					return -1;
 			}
 			return (int) (pl-plants);
 		}
